// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array extensions toMap should work 1`] = `
Map {
  1 => {
    "a": 1,
  },
  2 => {
    "a": 2,
  },
  3 => {
    "a": 3,
  },
}
`;

exports[`Array extensions toMap should work 2`] = `
Map {
  1 => {
    "a": 1,
  },
  2 => {
    "a": 2,
  },
  3 => {
    "a": 3,
  },
}
`;

exports[`Array extensions toMap should work 3`] = `
Map {
  "1" => {
    "a": 1,
  },
  "2" => {
    "a": 2,
  },
  "3" => {
    "a": 3,
  },
}
`;
